@@ -83,6 +83,8 @@ Revision history for Perl extension App::Sqitch
        update-config` action remains in place.
      - Added the URI-overridding parameters `user`, `host`, `port`, and
        `dbname` to App::Sqitch::Target.
+     - Added support for attributes to be passed to the App::Sqitch::Target
+       `all_targets` method. Such attributes will be set on all returned targets.
 
 0.9998 2018-10-03T20:53:58Z
      - Fixed an issue where Sqitch would sometimes truncate the registry
